Bug 14668 - YUV2 on textured video not shown correctly..
Summary: YUV2 on textured video not shown correctly..
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: PowerPC Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-25 08:13 UTC by Sjoerd Simons
Modified: 2008-02-28 03:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
YUV2 output (16.79 KB, image/png)
2008-02-25 08:14 UTC, Sjoerd Simons
no flags Details

Description Sjoerd Simons 2008-02-25 08:13:25 UTC
YUY2 and UYVY aren't shown correctly using the textured xv video port on my powerpc. I can't test it on an x86, but this might just be an endianess error.. I420 and YV12 work fine.

This is on a powerbook G4 with a RV350
Comment 1 Sjoerd Simons 2008-02-25 08:14:02 UTC
Created attachment 14557 [details]
YUV2 output
Comment 2 Alex Deucher 2008-02-26 12:19:25 UTC
Can you try the latest changes in git?
Comment 3 Michel Dänzer 2008-02-28 03:31:14 UTC
(In reply to comment #2)
> Can you try the latest changes in git?

It was fixed with the DRI enabled but still broken with it disabled. Fixed as well in 5249f450a2487475a95531603cc8668db2c21c33.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.