Fix 16 bit packed YUV XVideo playback on big endian systems with DRI disabled.

http://bugs.freedesktop.org/show_bug.cgi?id=14668